Target Java 8 instead of 21 at runtime; test code still at source level 21